// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-else.setup.tsx 1`] = `
"const { foo = 2 } = defineProps<{
  foo: number
}>()

export default (
  <>
    {(foo === 0) ? <div>0</div> :
     (foo === 1) ? <div>1</div> :
    <div>2</div>}
  </>
)
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-else-if.setup.tsx 1`] = `
"const { foo = 0 } = defineProps<{
  foo: number
}>()

export default (
  <>
    {(foo === 0) ? <div>0</div> :
     (foo === 1) ? <div>1</div> :
     (foo === 2) ? <div>2</div> : null}
  </>
)
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-if.setup.tsx 1`] = `
"import { expectTypeOf } from 'expect-type'
const { foo } = defineProps<{
  foo: number
}>()

export default (
  <>
    {(foo === 0) ? <div>{expectTypeOf<0>(foo)}</div> : null}
    {(foo ? true : false) ? <div>1</div> : null}
  </>
)
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-if.tsx 1`] = `
"import { expectTypeOf } from 'expect-type'
const { foo } = defineProps<{
  foo: number
}>()

export default (
  <>
    {(foo === 0) ? <div>{expectTypeOf<0>(foo)}</div> : null}
    {(foo ? true : false) ? <div>1</div> : null}
  </>
)
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-if-nested.setup.tsx 1`] = `
"const { foo = 0 } = defineProps<{
  foo: number
}>()

export default (
  <>
    {(foo === 0) ? <div>
      {(foo === 0) ? <div>0-0</div> :
       (foo === 1) ? <div>0-1</div> :
      <div>0-2</div>}
    </div> : null}
  </>
)
"
`;
